fixed widget spacing

--- a/client/inapp/sass/components/_messenger.scss
+++ b/client/inapp/sass/components/_messenger.scss
@@ -6,9 +6,10 @@
   z-index: 999999999;
   display: flex;
   flex-direction: column;
-  height: calc(100% - 95px - 30px);
+  height: calc(100% - 90px);
   max-height: 620px;
   border-radius: 4px;
   overflow: hidden;
-  right: 2px;
+  right: 8px;
+  bottom: 86px;
 }
