--- a/client/inapp/widget/index.css
+++ b/client/inapp/widget/index.css
@@ -1,17 +1,16 @@
 #erxes-iframe {
   position: fixed;
-  bottom: 0px;
-  right: 0px;
-  padding: 20px;
+  bottom: 12px;
+  right: 12px;
   border: none;
 }
 
 .erxes-messenger-hidden {
-  width: 100px;
-  height: 100px;
+  width: 72px;
+  height: 72px;
 }
 
 .erxes-messenger-shown {
-  width: 440px;
-  height: calc(100% - 95px - 30px);
+  width: 386px;
+  height: calc(100% - 50px);
 }
